chapter-2/.metals/.reports/metals/2023-09-06/r_scala-toplevel-mtags_20-25-46-372
id: file://<WORKSPACE>/MyModule.scala:[535..536) in Input.VirtualFile("file://<WORKSPACE>/MyModule.scala", "object MyModule {
    def fib(n: Int): Int = {
        @annotation.tailrec
        def go(n: Int, p1: Int, p2: Int): Int = 
            if (n == 0) p2
            else go(n-1, p2, p1+p2)

        if (n <= 0) 0 
        else go(n, 0, 1)
    }

    def isSorted[A](as: Array[A], ordered: (A,A) => Boolean): Boolean = {
        @annotation.tailrec
        def go(n: Int): Boolean = 
            if (n == as.length) true
            else if (n > 0 && !ordered(as(n-1), as(n))) false
            else go(n+1)

        go(0)
    }

    def 
}   ")
file://<WORKSPACE>/MyModule.scala:23: error: expected identifier; obtained rbrace
}   
^